start working with header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>20BET</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="./styles/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="d-flex justify-content-between">
+                <div class="logo">
+                    <a href="#"><img src="./img/logo.png" alt="logo"></a>
+                </div>
+                <div class="menu">
+                    <div class="d-flex">
+                        <a href="#" class="header-button promotions-button">
+                            <img src="./img/promotion-icon.svg" alt="promotion-icon">
+                            <span class="header-button-text">Бонусы и акции</span>
+                            <img src="./img/-a-stack-of-money-flies-with-wings-around-a-coin.png" class="header-button-img" alt="stack-of-money">
+                        </a>
+                        <a href="#" class="header-button free-money-button">
+                            <img src="./img/free-money.png" class="header-button-img" alt="free-money">
+                            <span class="header-button-text">Free money</span>
+                            <img src="./img/chevron-right.svg" alt="chevron-right">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
     <script src="./main.js"></script>
 </body>
 </html>
