--- a/index.html
+++ b/index.html
@@ -394,6 +394,114 @@
         </div>
     </section>
 
+    <section class="game-block">
+        <div class="container">
+            <div class="game-block--border">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="game-block-mini">
+                            <div class="game-block-mini--heading d-flex justify-content-between">
+                                <h3 class="game-block-mini--heading-h3">Game 2</h3>
+                                <div class="game-block-mini--background-img d-flex align-items-center justify-content-center">
+                                    <img class="game-block-mini--img" src="./img/man.png" alt="man">
+                                </div>
+                            </div>
+                            <p class="game-block-mini--p">Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="game-block-mini">
+                            <div class="game-block-mini--heading d-flex justify-content-between">
+                                <h3 class="game-block-mini--heading-h3">Game 2</h3>
+                                <div class="game-block-mini--background-img d-flex align-items-center justify-content-center">
+                                    <img class="game-block-mini--img" src="./img/man.png" alt="man">
+                                </div>
+                            </div>
+                            <p class="game-block-mini--p">Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="game-block-mini">
+                            <div class="game-block-mini--heading d-flex justify-content-between">
+                                <h3 class="game-block-mini--heading-h3">Game 2</h3>
+                                <div class="game-block-mini--background-img d-flex align-items-center justify-content-center">
+                                    <img class="game-block-mini--img" src="./img/man.png" alt="man">
+                                </div>
+                            </div>
+                            <p class="game-block-mini--p">Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="game-block-mini">
+                            <div class="game-block-mini--heading d-flex justify-content-between">
+                                <h3 class="game-block-mini--heading-h3">Game 2</h3>
+                                <div class="game-block-mini--background-img d-flex align-items-center justify-content-center">
+                                    <img class="game-block-mini--img" src="./img/man.png" alt="man">
+                                </div>
+                            </div>
+                            <p class="game-block-mini--p">Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages--border">
+                <div class="row">
+                    <div class="col-7">
+                        <div class="d-flex flex-column align-items-start">
+                            <h2 class="advantages--h">Advantages 20BET</h2>
+                            <div class="advantages--list">
+                                <div class="advantages--list-items d-flex align-items-center">
+                                    <div class="advantages-list-items--background-img d-flex align-items-center justify-content-center">
+                                        <img class="advantages-list-items--img" src="./img/Icon.png" alt="icon">
+                                    </div>
+                                    <div class="advantages-list-items--text">
+                                        <h3 class="advantages--text-h3">Все виды ставок</h3>
+                                        <p class="advantages--text-p">Широкий выбор видов спорта, на которые можно делать ставки</p>
+                                    </div>
+                                </div>
+                                <div class="advantages--list-items d-flex align-items-center">
+                                    <div class="advantages-list-items--background-img d-flex align-items-center justify-content-center">
+                                        <img class="advantages-list-items--img" src="./img/Icon.png" alt="icon">
+                                    </div>
+                                    <div class="advantages-list-items--text">
+                                        <h3 class="advantages--text-h3">Оплата</h3>
+                                        <p class="advantages--text-p">Широкий выбор способов оплаты</p>
+                                    </div>
+                                </div>
+                                <div class="advantages--list-items d-flex align-items-center">
+                                    <div class="advantages-list-items--background-img d-flex align-items-center justify-content-center">
+                                        <img class="advantages-list-items--img" src="./img/database.png" alt="icon">
+                                    </div>
+                                    <div class="advantages-list-items--text">
+                                        <h3 class="advantages--text-h3">Реальные ставки</h3>
+                                        <p class="advantages--text-p">Высокие коэфициенты и возможности ставок в реальном времени</p>
+                                    </div>
+                                </div>
+                                <div class="advantages--list-items d-flex align-items-center">
+                                    <div class="advantages-list-items--background-img d-flex align-items-center justify-content-center">
+                                        <img class="advantages-list-items--img" src="./img/database.png" alt="icon">
+                                    </div>
+                                    <div class="advantages-list-items--text">
+                                        <h3 class="advantages--text-h3">Быстрая выплата</h3>
+                                        <p class="advantages--text-p">Самые простые и быстрые способы оплаты</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#" class="button-border-hover button-border-hover--green"><span class="font-size-20">Sign up</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        
+    </section>
+
 
     <script src="./js/jQuery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
