--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>20BET</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -803,6 +806,194 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="casino">
+        <div class="container">
+            <div class="casino-inner">
+                <div class="casino-top d-flex justify-content-between align-items-center">
+                    <h2>казино <span> (47)</span></h2>
+                    <a href="#" class="casino-show-all">Показать все</a>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                        <img src="./img/casino-1.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-2.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-3.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-4.png" alt="casino-1">
+                    </div>
+                </div>
+                <div class="row d-none more-casino">
+                    <div class="col-3">
+                        <img src="./img/casino-1.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-2.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-3.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-4.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-1.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-2.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-3.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-4.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-1.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-2.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-3.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-4.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-1.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-2.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-3.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-4.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-1.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-2.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-3.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-4.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-1.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-2.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-3.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-4.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-1.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-2.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-3.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-4.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-1.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-2.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-3.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-4.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-1.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-2.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-3.png" alt="casino-1">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/casino-4.png" alt="casino-1">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="our-bonuses">
+        <div class="container">
+            <div class="our-bonuses-inner">
+                <h2>Наши бонусы</h2>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="our-bonuses-block d-flex flex-column">
+                            <img src="./img/our-bonuses-block-img.png" alt="icon" class="our-bonuses-block-icon">
+                            <div class="d-flex justify-content-end">
+                                <img src="./img/our-bonuses-block-money.png" alt="money" class="our-bonuses-block-money">
+                            </div>
+                            <h3>Приветственный <span>бонус <br> 20 bet Возьми 100% </span><br> бонус воля</h3>
+                            <p>Настроить визуальное отображение для удобного чтения на всех устройствах.</p>
+
+                            <a href="#" class="button-border-hover button-border-hover--green">
+                                <span class="font-size-20">Использовать бонус</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="our-bonuses-block d-flex flex-column">
+                            <img src="./img/our-bonuses-block-img.png" alt="icon" class="our-bonuses-block-icon">
+                            <div class="d-flex justify-content-end">
+                                <img src="./img/our-bonuses-block-money.png" alt="money" class="our-bonuses-block-money">
+                            </div>
+                            <h3>Приветственный <span>бонус <br> 20 bet Возьми 100% </span><br> бонус воля</h3>
+                            <p>Настроить визуальное отображение для удобного чтения на всех устройствах.</p>
+
+                            <a href="#" class="button-border-hover button-border-hover--green">
+                                <span class="font-size-20">Использовать бонус</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="our-bonuses-block d-flex flex-column">
+                            <img src="./img/our-bonuses-block-img.png" alt="icon" class="our-bonuses-block-icon">
+                            <div class="d-flex justify-content-end">
+                                <img src="./img/our-bonuses-block-money.png" alt="money" class="our-bonuses-block-money">
+                            </div>
+                            <h3>Приветственный <span>бонус <br> 20 bet Возьми 100% </span><br> бонус воля</h3>
+                            <p>Настроить визуальное отображение для удобного чтения на всех устройствах.</p>
+
+                            <a href="#" class="button-border-hover button-border-hover--green">
+                                <span class="font-size-20">Использовать бонус</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>  
+                <div class="our-bonuses-big-block"></div>
+            </div>       
         </div>
     </section>
 
