--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
         <div class="container">
             <div class="our-bonuses-inner">
                 <h2>Наши бонусы</h2>
-                <div class="row">
+                <div class="row our-bonuses-row">
                     <div class="col-4">
                         <div class="our-bonuses-block d-flex flex-column">
                             <img src="./img/our-bonuses-block-img.png" alt="icon" class="our-bonuses-block-icon">
@@ -992,8 +992,75 @@
                         </div>
                     </div>
                 </div>  
-                <div class="our-bonuses-big-block"></div>
+                <div class="our-bonuses-big-block">
+                    <div class="our-bonuses-money-bg">
+                        <h3>Приветственный <span>бонус 20 bet <br> Возьми 100% </span> бонус воля</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in lacus sed sem molestie tristique vitae vel quam. Phasellus in enim non sapien lobortis lobortis id sit amet leo. </p>
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="our-bonuses-step-block">
+                                    <h4>Создать</h4>
+                                    <h5>Аккаунт 20 BET</h5>
+                                    <p>Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
+                                    <div class="our-bonuses-step">
+                                        Шаг 1
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-4">
+                                <div class="our-bonuses-step-block">
+                                    <h4>Создать</h4>
+                                    <h5>Аккаунт 20 BET</h5>
+                                    <p>Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
+                                    <div class="our-bonuses-step">
+                                        Шаг 2
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-4">
+                                <div class="our-bonuses-step-block">
+                                    <h4>Создать</h4>
+                                    <h5>Аккаунт 20 BET</h5>
+                                    <p>Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
+                                    <div class="our-bonuses-step">
+                                        Шаг 3
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>       
+        </div>
+    </section>
+
+    <section class="faq">
+        <div class="container">
+            <div class="faq-inner">
+                <h2>вопросы-ответы</h2>
+                <div class="faq-question-block">
+                    <div class="faq-question-block-number">1.</div>
+                    <h6>On the left side is an image that will be identified with the brand and/or region.</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in lacus sed sem molestie tristique vitae vel quam. Phasellus in enim non sapien lobortis lobortis id sit amet leo. </p>
+                </div>
+                <div class="faq-question-block">
+                    <div class="faq-question-block-number">2.</div>
+                    <h6>On the left side is an image that will be identified with the brand and/or region.</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in lacus sed sem molestie tristique vitae vel quam. Phasellus in enim non sapien lobortis lobortis id sit amet leo. </p>
+                </div>
+                <div class="faq-question-block">
+                    <div class="faq-question-block-number">3.</div>
+                    <h6>On the left side is an image that will be identified with the brand and/or region.</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in lacus sed sem molestie tristique vitae vel quam. Phasellus in enim non sapien lobortis lobortis id sit amet leo. </p>
+                </div>
+                <div class="faq-question-block">
+                    <div class="faq-question-block-number">4.</div>
+                    <h6>On the left side is an image that will be identified with the brand and/or region.</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in lacus sed sem molestie tristique vitae vel quam. Phasellus in enim non sapien lobortis lobortis id sit amet leo. </p>
+                </div>
+            </div>
         </div>
     </section>
 
