add links to blocks

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             <div class="game-block--border">
                 <div class="row">
                     <div class="col-12 col-lg-3 col-sm-6 tablet-margin-bottom">
-                        <div class="game-block-mini">
+                        <a href="#" class="game-block-mini">
                             <div class="game-block-mini--heading d-flex justify-content-between">
                                 <h3 class="game-block-mini--heading-h3">Game 2</h3>
                                 <div class="game-block-mini--background-img d-flex align-items-center justify-content-center">
@@ -651,10 +651,10 @@
                                 </div>
                             </div>
                             <p class="game-block-mini--p">Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-12 col-lg-3 col-sm-6 tablet-margin-bottom">
-                        <div class="game-block-mini">
+                        <a href="#" class="game-block-mini">
                             <div class="game-block-mini--heading d-flex justify-content-between">
                                 <h3 class="game-block-mini--heading-h3">Game 2</h3>
                                 <div class="game-block-mini--background-img d-flex align-items-center justify-content-center">
@@ -662,10 +662,10 @@
                                 </div>
                             </div>
                             <p class="game-block-mini--p">Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-12 col-lg-3 col-sm-6 mobile-margin-bottom">
-                        <div class="game-block-mini">
+                        <a href="#"  class="game-block-mini">
                             <div class="game-block-mini--heading d-flex justify-content-between">
                                 <h3 class="game-block-mini--heading-h3">Game 2</h3>
                                 <div class="game-block-mini--background-img d-flex align-items-center justify-content-center">
@@ -673,10 +673,10 @@
                                 </div>
                             </div>
                             <p class="game-block-mini--p">Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-12 col-lg-3 col-sm-6">
-                        <div class="game-block-mini">
+                        <a href="#"  class="game-block-mini">
                             <div class="game-block-mini--heading d-flex justify-content-between">
                                 <h3 class="game-block-mini--heading-h3">Game 2</h3>
                                 <div class="game-block-mini--background-img d-flex align-items-center justify-content-center">
@@ -684,7 +684,7 @@
                                 </div>
                             </div>
                             <p class="game-block-mini--p">Нажмите кнопку в правом верхнем углу чтобы создать аккаунт</p>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -1095,44 +1095,69 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-6">
-                        <img src="./img/casino-1.png" alt="casino-1">
+                        <a href="#">
+                            <img src="./img/casino-1.png" alt="casino-1">
+                        </a>
                     </div>
                     <div class="col-lg-3 col-6">
-                        <img src="./img/casino-2.png" alt="casino-1">
+                        <a href="#">
+                            <img src="./img/casino-2.png" alt="casino-2">
+                        </a>
                     </div>
                     <div class="col-lg-3 col-6">
-                        <img src="./img/casino-3.png" alt="casino-1">
+                        <a href="#">
+                            <img src="./img/casino-3.png" alt="casino-3">
+                        </a>
                     </div>
                     <div class="col-lg-3 col-6">
-                        <img src="./img/casino-4.png" alt="casino-1">
+                        <a href="#">
+                            <img src="./img/casino-4.png" alt="casino-4">
+                        </a>
                     </div>
                 </div>
                 <div class="row d-none more-casino">
-                    <div class="col-lg-3 col-6">
-                        <img src="./img/casino-1.png" alt="casino-1">
-                    </div>
-                    <div class="col-lg-3 col-6">
-                        <img src="./img/casino-2.png" alt="casino-1">
-                    </div>
-                    <div class="col-lg-3 col-6">
-                        <img src="./img/casino-3.png" alt="casino-1">
-                    </div>
-                    <div class="col-lg-3 col-6">
-                        <img src="./img/casino-4.png" alt="casino-1">
-                    </div>
-                    <div class="col-lg-3 col-6">
-                        <img src="./img/casino-1.png" alt="casino-1">
-                    </div>
-                    <div class="col-lg-3 col-6">
-                        <img src="./img/casino-2.png" alt="casino-1">
-                    </div>
-                    <div class="col-lg-3 col-6">
-                        <img src="./img/casino-3.png" alt="casino-1">
-                    </div>
-                    <div class="col-lg-3 col-6">
-                        <img src="./img/casino-4.png" alt="casino-1">
-                    </div>
                     
+                    <div class="col-lg-3 col-6">
+                        <a href="#">
+                            <img src="./img/casino-1.png" alt="casino-1">
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-6">
+                        <a href="#">
+                            <img src="./img/casino-2.png" alt="casino-2">
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-6">
+                        <a href="#">
+                            <img src="./img/casino-3.png" alt="casino-3">
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-6">
+                        <a href="#">
+                            <img src="./img/casino-4.png" alt="casino-4">
+                        </a>
+                    </div>
+
+                    <div class="col-lg-3 col-6">
+                        <a href="#">
+                            <img src="./img/casino-1.png" alt="casino-1">
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-6">
+                        <a href="#">
+                            <img src="./img/casino-2.png" alt="casino-2">
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-6">
+                        <a href="#">
+                            <img src="./img/casino-3.png" alt="casino-3">
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-6">
+                        <a href="#">
+                            <img src="./img/casino-4.png" alt="casino-4">
+                        </a>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-center d-lg-none">
                     <a href="#" class="casino-show-all">Показать все</a>
